// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> component its snapshot matches story Default 1`] = `
.c4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  border: none;
  display: block;
  padding: 0.3rem 0;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c3:hover {
  cursor: pointer;
}

.c3 label {
  color: #161616;
  text-align: left;
}

.c2 {
  padding: 0.1rem 0;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c2 label {
  color: #161616;
  text-align: left;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c1 {
  font: 400 0.75rem/0.9999974999999999rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.32px;
  -moz-letter-spacing: 0.32px;
  -ms-letter-spacing: 0.32px;
  letter-spacing: 0.32px;
  color: #525252;
  margin-bottom: 0.5rem;
}

<div>
  <div
    class="Filtersstyles__Filters-sc-r0wlt1-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        Colour
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Red"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Red"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Red (10)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Green"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Green"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Green (7)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Blue"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Blue"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Blue (3)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Yellow"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Yellow"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Yellow (1)
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        Size
      </div>
      <button
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="cds--radio-button-wrapper"
          >
            <input
              class="cds--radio-button"
              id="XL"
              name="Size"
              type="radio"
              value=""
            />
            <label
              class="cds--radio-button__label"
              for="XL"
            >
              <span
                class="cds--radio-button__appearance"
              />
              <span>
                XL (11)
              </span>
            </label>
          </div>
        </div>
      </button>
      <button
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="cds--radio-button-wrapper"
          >
            <input
              class="cds--radio-button"
              id="L"
              name="Size"
              type="radio"
              value=""
            />
            <label
              class="cds--radio-button__label"
              for="L"
            >
              <span
                class="cds--radio-button__appearance"
              />
              <span>
                L (6)
              </span>
            </label>
          </div>
        </div>
      </button>
      <button
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="cds--radio-button-wrapper"
          >
            <input
              class="cds--radio-button"
              id="M"
              name="Size"
              type="radio"
              value=""
            />
            <label
              class="cds--radio-button__label"
              for="M"
            >
              <span
                class="cds--radio-button__appearance"
              />
              <span>
                M (2)
              </span>
            </label>
          </div>
        </div>
      </button>
      <button
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="cds--radio-button-wrapper"
          >
            <input
              class="cds--radio-button"
              id="S"
              name="Size"
              type="radio"
              value=""
            />
            <label
              class="cds--radio-button__label"
              for="S"
            >
              <span
                class="cds--radio-button__appearance"
              />
              <span>
                S (2)
              </span>
            </label>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Filters /> component its snapshot matches story Skeleton 1`] = `
.c3 {
  padding: 0.1rem 0;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c3 label {
  color: #161616;
  text-align: left;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c1 {
  font: 400 0.75rem/0.9999974999999999rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.32px;
  -moz-letter-spacing: 0.32px;
  -ms-letter-spacing: 0.32px;
  letter-spacing: 0.32px;
  color: #525252;
  margin-bottom: 0.5rem;
}

.c2 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c2::before {
  content: '\\00a0';
}

<div>
  <div
    class="Filtersstyles__Filters-sc-r0wlt1-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        />
      </div>
      <div
        class="c3"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="0"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="0"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                <div
                  class="c2"
                />
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="1"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="1"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                <div
                  class="c2"
                />
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="2"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="2"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                <div
                  class="c2"
                />
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Filters /> component its snapshot matches story WithSelected 1`] = `
.c4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  border: none;
  display: block;
  padding: 0.3rem 0;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c3:hover {
  cursor: pointer;
}

.c3 label {
  color: #161616;
  text-align: left;
}

.c2 {
  padding: 0.1rem 0;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c2 label {
  color: #161616;
  text-align: left;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c1 {
  font: 400 0.75rem/0.9999974999999999rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.32px;
  -moz-letter-spacing: 0.32px;
  -ms-letter-spacing: 0.32px;
  letter-spacing: 0.32px;
  color: #525252;
  margin-bottom: 0.5rem;
}

<div>
  <div
    class="Filtersstyles__Filters-sc-r0wlt1-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        Colour
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Red"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Red"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Red (10)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Green"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Green"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Green (7)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Blue"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Blue"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Blue (3)
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
        >
          <div
            class="cds--form-item cds--checkbox-wrapper filter-checkbox"
          >
            <input
              class="cds--checkbox"
              id="Yellow"
              name="filter-checkbox"
              type="checkbox"
            />
            <label
              class="cds--checkbox-label"
              for="Yellow"
            >
              <span
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Yellow (1)
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        Size
      </div>
      <button
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="cds--radio-button-wrapper"
          >
            <input
              checked=""
              class="cds--radio-button"
              id="XL"
              name="Size"
              type="radio"
              value=""
            />
            <label
              class="cds--radio-button__label"
              for="XL"
            >
              <span
                class="cds--radio-button__appearance"
              />
              <span>
                XL (11)
              </span>
            </label>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
